added nav, footer and not-found components, closes #3

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,3 @@
-<h1>Angular Material</h1>
-<P>Material Design components for Angular</P>
+<app-navigation></app-navigation>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
