--- a/frontend/src/app/components/navigation/navigation.component.css
+++ b/frontend/src/app/components/navigation/navigation.component.css
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
+  margin-bottom: 3px;
 }
 
 a.logo{
@@ -19,6 +21,7 @@ a.logo{
   align-items: center;
   margin: 30px 0 0 0;
   width: 30%;
+  margin-bottom: 10px;
 }
 
 .search-icon:hover {
