--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!!</p>
+<div class="hero">
+    <div class="left">
+        <div class="content">
+            <h1>Stack <span>Overflow</span><sub>Lite</sub></h1>
+            <p>Find the best answer to your technical question, help others answer theirs</p>
+            <div class="btn-container">
+                <button mat-raised-button routerLink="/signup" color="primary">Join the Community</button>
+            </div>
+        </div>
+    </div>
+    <div class="right">
+        <img src="assets/images/globe.svg" alt="">
+    </div>
+</div>
