--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -12,3 +12,9 @@
         <img src="assets/images/globe.svg" alt="">
     </div>
 </div>
+<div class="search-form-container">
+    <div class="search">
+        <app-search></app-search>
+    </div>
+    <button mat-raised-button routerLink="/post-question" color="accent">Post a Question</button>
+</div>
