--- a/frontend/src/app/pages/home/home.component.css
+++ b/frontend/src/app/pages/home/home.component.css
@@ -64,3 +64,23 @@ button:hover {
 .right img {
   width: 100%;
 }
+
+.search-form-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.search{
+    width: 60%;
+}
+
+.search-form-container button {
+  margin-left: 7rem;
+}
+
+button:hover {
+  background-color: #F48225;
+}
