place-holder component

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -4,7 +4,7 @@
             <h1>Stack <span>Overflow</span><sub>Lite</sub></h1>
             <p>Find the best answer to your technical question, help others answer theirs</p>
             <div class="btn-container">
-                <button mat-raised-button routerLink="/signup" color="primary">Join the Community</button>
+                <button mat-raised-button routerLink="/sign-up" color="primary">Join the Community</button>
             </div>
         </div>
     </div>
@@ -16,5 +16,5 @@
     <div class="search">
         <app-search></app-search>
     </div>
-    <button mat-raised-button routerLink="/post-question" color="accent">Post a Question</button>
+    <button mat-raised-button routerLink="/questions/ask" color="accent">Ask a Question</button>
 </div>
