comment card component

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -32,3 +32,11 @@
         </div>
     </ng-template>
 </div>
+
+<!-- 
+Comments Section 
+<div class="comments-section">
+    TODO: Add Pagination or Infinite Scroll
+    <app-comment-card *ngFor="let comment of comments" [comment]="comment"></app-comment-card>  
+  </div>
+ -->
