--- a/frontend/src/app/components/comment-card/comment-card.component.css
+++ b/frontend/src/app/components/comment-card/comment-card.component.css
@@ -1,27 +1,37 @@
 .comment {
   display: flex;
-  padding: 10px;
-  border-bottom: 1px solid #e1ecf4; /* To separate comments */
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  margin: 1rem 0;
+  border-radius: 5px;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
 
-.voting {
+.comment .content {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin-right: 10px; /* To add some space between voting and content */
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
 }
 
-.content {
-  flex-grow: 1; /* To fill the remaining space */
+.comment .content p {
+  margin: 0.5rem 0;
+  font-size: 0.8rem;
 }
 
-.user-info {
+.comment .content .user-info {
+  width: 100%;
   display: flex;
+  justify-content: flex-end;
   align-items: center;
-  margin-top: 10px /* To add some space between text and user info */;
+  font-size: 0.8rem;
 }
 
-.user-info img {
-  width: 32px;
-  height: auto;
+.comment .content .user-info img {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  margin-right: 0.5rem;
 }
