--- a/frontend/src/app/components/navigation/navigation.component.css
+++ b/frontend/src/app/components/navigation/navigation.component.css
@@ -4,14 +4,15 @@
   align-items: center;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 25px 50px 0 rgba(0, 0, 0, 0.1);
   margin-bottom: 3px;
+  background-color: white;
 }
 
-a.logo{
+a.logo {
   width: 20%;
   height: 100%;
 }
 
-.logo img{
+.logo img {
   width: 100%;
   height: 100%;
 }
