--- a/frontend/src/app/components/question-card/question-card.component.html
+++ b/frontend/src/app/components/question-card/question-card.component.html
@@ -3,19 +3,19 @@
         <div class="voting-answers-section">
             <div class="voting thumbs-ups">
                 <button mat-icon-button><mat-icon>thumb_up</mat-icon></button>
-                <span class="count">10</span>
+                <span class="count">{{question.upvotes}}</span>
             </div>
-            <div class="answers">
-                <span class="count">5</span>
+            <div class="answers-count">
+                <span class="count">{{question.answersCount}}</span>
                 answers
             </div>
             <div class="voting thumbs-downs">
                 <button mat-icon-button><mat-icon>thumb_down</mat-icon></button>
-                <span class="count">5</span>
+                <span class="count">{{question.downvotes}}</span>
             </div>
         </div>
         <div class="question-content">
-            <a routerLink="/questions/{{question.id}}">
+            <a class="question-title" routerLink="/questions/{{question.id}}">
                 <h3>{{question.title}}</h3>
             </a>
             <div class="description">
@@ -23,16 +23,18 @@
                 {{question.description}}
             </div>
             <div class="tags">
-                <span *ngFor="let tag of question.tags">{{tag}}</span>
+                <span *ngFor="let tag of question.tags">
+                    <a routerLink="/questions/tagged/{{tag.name}}">{{tag.name}}</a>
+                </span>
             </div>
             <div class="user-info">
                 <img src="{{question.user.avatar}}" alt="{{question.user.name}}">
-                <!-- TODO: Add Time Ago Pipe -->
+                <!-- TODO: Add Time Ago Pipe, should factor modified date -->
                 &nbsp;{{question.user.name}} asked {{question.time | date:'medium'}}
             </div>
         </div>
     </div>
-    <div>
-        <button mat-raised-button color="primary">Answer</button>
+    <div class="answer-btn">
+        <button mat-raised-button color="accent">Answer</button>
     </div>
 </mat-card>
