--- a/frontend/src/app/pages/home/home.component.css
+++ b/frontend/src/app/pages/home/home.component.css
@@ -51,9 +51,13 @@
 
 .left .btn-container button {
   color: white;
+  width: 50%;
+  height: 100%;
+  padding: 1rem 0.5rem;
+  font-size: 1.2rem;
 }
 
-button:hover {
+.left .btn-container button:hover {
   background-color: #0a95ff;
 }
 
@@ -79,11 +83,14 @@ button:hover {
 }
 
 .search-form-container button {
-  padding: 1.3rem 1rem;
+  height: 100%;
+  width: 15%;
+  padding: 1rem 0.5rem;
   margin-left: 7rem;
+  font-size: 1.2rem;
 }
 
-button:hover {
+.search-form-container button:hover {
   background-color: #f48225;
 }
 
