--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -33,10 +33,10 @@
     </ng-template>
 </div>
 
-<!-- 
-Comments Section 
+<!-- Comments Section
 <div class="comments-section">
-    TODO: Add Pagination or Infinite Scroll
+     TODO: Add Pagination or Infinite Scroll 
     <app-comment-card *ngFor="let comment of comments" [comment]="comment"></app-comment-card>  
-  </div>
- -->
+</div>
+-->
+<!-- Pagination -->
