--- a/frontend/src/app/components/place-holder/place-holder.component.html
+++ b/frontend/src/app/components/place-holder/place-holder.component.html
@@ -1,3 +1,5 @@
 <div>
     <h1>This is a placeholder for the <span>`{{path}}` </span>page</h1>
+    <h3>It is not yet implemented.</h3>
+    <button mat-raised-button color="accent" (click)="goBack()">Go Back</button>
 </div>
