--- a/frontend/src/app/components/tag-card/tag-card.component.html
+++ b/frontend/src/app/components/tag-card/tag-card.component.html
@@ -1,18 +1,19 @@
 <div class="tag-card">
     <div class="tag-card-header">
         <div class="tag-name">
-            <h2>{{tag.name}}</h2>
+            <a routerLink="/questions/tagged/{{tag.name}}" matTooltip="Questions tagged {{tag.name}}"
+                [matTooltipPosition]="position">{{tag.name}}</a>
         </div>
         <div class="tag-edit-delete">
             <button mat-icon-button [matMenuTriggerFor]="menu">
                 <mat-icon>more_vert</mat-icon>
             </button>
             <mat-menu #menu="matMenu">
-                <button mat-menu-item (click)="editTag()">
+                <button class="edit" mat-menu-item (click)="editTag()">
                     <mat-icon>edit</mat-icon>
                     <span>Edit</span>
                 </button>
-                <button mat-menu-item (click)="deleteTag()">
+                <button class="delete" mat-menu-item (click)="deleteTag()">
                     <mat-icon>delete</mat-icon>
                     <span>Delete</span>
                 </button>
@@ -20,7 +21,7 @@
         </div>
     </div>
     <div class="tag-description">
-        <p>{{tag.description}}</p>
+        <p>{{tag.description | truncate: 100}}</p>
     </div>
     <div class="tag-question-count">
         <p>{{tag.questionsCount}} questions</p>
