--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -2,7 +2,7 @@
     <a routerLink="/" class="logo">
         <img src="assets/images/Stack_Overflow_logo.png" alt="logo">
     </a>
-    <div>
+    <div class="nav-btns">
         <button mat-button routerLink="/questions">Questions</button>
         <button mat-button routerLink="/tags">Tags</button>
         <button mat-button routerLink="/users">Users</button>
