--- a/frontend/src/app/components/tag-card/tag-card.component.css
+++ b/frontend/src/app/components/tag-card/tag-card.component.css
@@ -19,13 +19,13 @@
   justify-content: space-between;
 }
 
-a {
+.tag-name {
   margin: 0;
   font-size: 1.5rem;
   font-weight: 500;
   padding: 0.2rem 0.5rem;
   margin: 0.2rem;
-  color: black;
+  color: white;
   background-color: #77c2fc;
 }
 
@@ -46,5 +46,10 @@ a {
 }
 
 .tag-description p {
-  margin: 0;
+  margin-top: 0.5rem;
+  font-size: 0.8rem;
+}
+
+.tag-question-count a {
+  color: black;
 }
