--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="left">
         <div class="content">
             <h1>Stack <span>Overflow</span><sub>Lite</sub></h1>
-            <p>Find the best answer to your technical question, help others answer theirs</p>
+            <p>Find the best answer to your technical question, or help others answer theirs</p>
             <div class="btn-container">
                 <button mat-raised-button routerLink="/sign-up" color="primary">Join the Community</button>
             </div>
