--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -28,9 +28,9 @@
     </div>
     <ng-container class="questions" *ngIf="(questions$ | async ) as questions; else noQuestions">
         <div class="questions" *ngIf="questions.length>0; else noQuestions">
-            <app-question-card
+            <app-question
                 *ngFor="let question of questions | paginate: { id: 'server', itemsPerPage: 5, currentPage: page, totalItems: questions.length }"
-                [question]="question"></app-question-card>
+                [question]="question"></app-question>
         </div>
     </ng-container>
     <ng-template #noQuestions>
@@ -45,7 +45,7 @@
 <!-- Comments
 <div class="comments-section">
      TODO: Add Pagination or Infinite Scroll 
-    <app-comment-card *ngFor="let comment of comments" [comment]="comment"></app-comment-card>  
+    <app-comment *ngFor="let comment of comments" [comment]="comment"></app-comment>  
 </div>
 -->
 
