--- a/frontend/src/app/components/question/question.component.css
+++ b/frontend/src/app/components/question/question.component.css
@@ -8,6 +8,10 @@
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
 
+.question-card:hover {
+  border: 1px solid #ff6f00;
+}
+
 .question {
   display: flex;
   justify-content: space-between;
