--- a/frontend/src/app/pages/questions/questions.component.html
+++ b/frontend/src/app/pages/questions/questions.component.html
@@ -1,29 +1,29 @@
 <div class="questions-page">
-    <div class="top-section">
-        <div class="questions-heading">
-            <h1>All Questions</h1>
+    <app-progress-spinner *ngIf="loading"></app-progress-spinner>
+    <ng-container *ngIf="(questions$ | async ) as questions; else noquestions">
+        <div class="top-section">
+            <div class="questions-heading">
+                <h1>All Questions <span class="questions-count">({{questions.length | thousandSeparator}})</span></h1>
+            </div>
+            <div class="ask-question">
+                <button mat-raised-button routerLink="/questions/ask" color="accent">Ask a Question</button>
+            </div>
         </div>
-        <div class="ask-question">
-            <button mat-raised-button routerLink="/questions/ask" color="accent">Ask a Question</button>
-        </div>
-    </div>
-    <div class="questions-container">
-        <mat-tab-group>
-            <mat-tab *ngFor="let questionCategorie of questionCategories" [label]="questionCategorie.label">
-                <app-progress-spinner *ngIf="loading"></app-progress-spinner>
-                <ng-container *ngIf="(questions$ | async ) as questions; else noquestions">
+        <div class="questions-container">
+            <mat-tab-group>
+                <mat-tab *ngFor="let questionCategorie of questionCategories" [label]="questionCategorie.label">
                     <div class="questions" *ngIf="questions.length>0; else noquestions">
                         <app-question class="question" *ngFor="let question of questions"
                             [question]="question"></app-question>
                     </div>
-                </ng-container>
-                <ng-template #noquestions>
-                    <div class="no-questions" *ngIf="!loading">
-                        <p>There are no questions yet. Be the first to add a question.</p>
-                        <button mat-raised-button routerLink="/questions/add" color="accent">Add a question</button>
-                    </div>
-                </ng-template>
-            </mat-tab>
-        </mat-tab-group>
-    </div>
+                </mat-tab>
+            </mat-tab-group>
+        </div>
+    </ng-container>
+    <ng-template #noquestions>
+        <div class="no-questions" *ngIf="!loading">
+            <p>There are no questions yet. Be the first to add a question.</p>
+            <button mat-raised-button routerLink="/questions/add" color="accent">Add a question</button>
+        </div>
+    </ng-template>
 </div>
