--- a/frontend/src/app/components/navigation/navigation.component.html
+++ b/frontend/src/app/components/navigation/navigation.component.html
@@ -3,9 +3,9 @@
         <img src="assets/images/Stack_Overflow_logo.png" alt="logo">
     </a>
     <div class="nav-btns">
-        <button mat-button routerLink="/questions">Questions</button>
-        <button mat-button routerLink="/tags">Tags</button>
-        <button mat-button routerLink="/users">Users</button>
+        <button mat-button routerLink="/questions" routerLinkActive="active">Questions</button>
+        <button mat-button routerLink="/tags" routerLinkActive="active">Tags</button>
+        <button mat-button routerLink="/users" routerLinkActive="active">Users</button>
     </div>
     <mat-form-field appearance="outline" class="search-container">
         <input matInput placeholder="Search">
