--- a/frontend/src/app/pages/update-profile/update-profile.component.html
+++ b/frontend/src/app/pages/update-profile/update-profile.component.html
@@ -1,4 +1,9 @@
 <div class="update-profile-page">
+    <div class="go-back">
+        <button mat-raised-button color="accent" (click)="goBack()">
+            <mat-icon>arrow_back</mat-icon> Go Back
+        </button>
+    </div>
     <div class="title-container">
         <h1>Update Your Profile</h1>
     </div>
