--- a/frontend/src/app/pages/sign-up/sign-up.component.html
+++ b/frontend/src/app/pages/sign-up/sign-up.component.html
@@ -1,6 +1,6 @@
 <div class="sign-up-page">
     <div class="left-section">
-        <h1>Join the Stack <span>Overflow</span><sub>Lite</sub> community</h1>
+        <h1>Join the Stack <span>Overflow</span><sub>Lite</sub>&nbsp;community</h1>
         <p>Collaborate and share knowledge</p>
     </div>
     <div class="right-section">
