increased the textarea rows

--- a/frontend/src/app/pages/ask-question/ask-question.component.html
+++ b/frontend/src/app/pages/ask-question/ask-question.component.html
@@ -27,7 +27,7 @@
                 <div class="question-field question-details">
                     <mat-form-field appearance="outline">
                         <mat-label>What are the details of your problem?</mat-label>
-                        <textarea matInput matTextareaAutosize formControlName="details"></textarea>
+                        <textarea matInput rows='10' matTextareaAutosize formControlName="details"></textarea>
                         <mat-hint align="start">
                             Include all the information someone would need to answer your question.
                         </mat-hint>
@@ -42,7 +42,7 @@
                 <div class="question-field question-tried">
                     <mat-form-field appearance="outline">
                         <mat-label>What did you try and what were you expecting?</mat-label>
-                        <textarea matInput matTextareaAutosize formControlName="tryExpect"></textarea>
+                        <textarea rows='10' matInput matTextareaAutosize formControlName="tryExpect"></textarea>
                         <mat-hint align="start">
                             The body of your question contains your problem details and results.
                         </mat-hint>
