question page i.e question, comments and answers

--- a/frontend/src/app/components/question/question.component.html
+++ b/frontend/src/app/components/question/question.component.html
@@ -34,6 +34,6 @@
         </div>
     </div>
     <div class="answer-btn">
-        <button mat-raised-button color="accent">Answer</button>
+        <button mat-raised-button color="accent" routerLink="/questions/{{question.id}}#answer">Answer</button>
     </div>
 </mat-card>
