--- a/frontend/src/app/pages/questions/questions.component.html
+++ b/frontend/src/app/pages/questions/questions.component.html
@@ -23,7 +23,7 @@
     <ng-template #noquestions>
         <div class="no-questions" *ngIf="!loading">
             <p>There are no questions yet. Be the first to add a question.</p>
-            <button mat-raised-button routerLink="/questions/add" color="accent">Add a question</button>
+            <button mat-raised-button routerLink="/questions/ask" color="accent">Add a question</button>
         </div>
     </ng-template>
 </div>
